[gd_scene load_steps=11 format=3 uid="uid://dc1ukndguqyam"]

[ext_resource type="Script" path="res://Screens/Scripts/Menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://qhkymtn0rlbm" path="res://Sprites/Menu/Sleeping_Wood.png" id="3_ooklj"]
[ext_resource type="Texture2D" uid="uid://tkt6xoyahkqd" path="res://Sprites/Menu/Sleeping_Wood_Awake.png" id="4_gy3d0"]
[ext_resource type="Texture2D" uid="uid://ba6unfwab4ak6" path="res://Sprites/Player/Player_0.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b3ici1gdn4j3" path="res://Sprites/Menu/Exclamation.png" id="5_f6vvd"]
[ext_resource type="FontFile" uid="uid://1ly641ihsl4n" path="res://Font/Kenney Future.ttf" id="6"]
[ext_resource type="Theme" uid="uid://bibux11p0isw6" path="res://UI/Main Theme.tres" id="7"]
[ext_resource type="Theme" uid="uid://bci48k31qmg5s" path="res://UI/Themes/Button Main.tres" id="8"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ooklj")
}, {
"duration": 1.0,
"texture": ExtResource("4_gy3d0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("6")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/48/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/48/0 = Vector2(0, 0)

[node name="Menu" type="Node2D"]
script = ExtResource("1")

[node name="Log" type="Sprite2D" parent="."]
position = Vector2(308, 409)
texture = ExtResource("5")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(251, 116)
sprite_frames = SubResource("1")
offset = Vector2(51, 237)

[node name="Exclamation" type="Sprite2D" parent="."]
visible = false
position = Vector2(422, 242)
texture = ExtResource("5_f6vvd")
offset = Vector2(-22, -2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="btnPlay" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 100.0
offset_top = 713.0
offset_right = 510.0
offset_bottom = 836.0
theme = ExtResource("7")
theme_override_fonts/font = SubResource("3")
text = "Play"

[node name="btnSettings" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 101.0
offset_top = 875.0
offset_right = 284.0
offset_bottom = 998.0
theme = ExtResource("8")
text = "Settings"

[node name="btnStore" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 327.0
offset_top = 875.0
offset_right = 510.0
offset_bottom = 998.0
theme = ExtResource("8")
text = "Store"

[node name="Timer" type="Timer" parent="CanvasLayer/Control"]
wait_time = 0.5
one_shot = true

[node name="lblTitle" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_top = 16.0
offset_right = 600.0
offset_bottom = 145.0
theme = ExtResource("7")
theme_override_font_sizes/font_size = 48
text = "I Don't Have a 
Fucking Clue"
horizontal_alignment = 1

[node name="lblHighScore" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_top = 524.0
offset_right = 600.0
offset_bottom = 656.0
theme = ExtResource("7")
text = "High Score: 0
Points: 0"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="pressed" from="CanvasLayer/Control/btnPlay" to="." method="_on_btnPlay_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/btnSettings" to="." method="_on_btnSettings_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/btnStore" to="." method="_on_btnStore_pressed"]
[connection signal="timeout" from="CanvasLayer/Control/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
